Rename the XPC identifier use the framework bundle

This allows the XPC service to be named the same for all channels

BUG=696493
TBR=mark@chromium.org

Review-Url: https://codereview.chromium.org/2727003002
Cr-Commit-Position: refs/heads/master@{#454221}

Former-commit-id: 49e0de872b7361e0e9514da93f7f1358de344b0c